MDEV-10185: Assertion `tree1->keys[key_no] && tree2->keys[key_no]' failed in

Make tree_or set correct SEL_TREE::keys_map for the result.